# llanfeng_code

./: .gitignore  CHANGELOG.md  Codex.md  PRODUCT.md  README.md  main.py  pyproject.toml
assets/: codex-plugin.vbs
docs/: packaging.md  protocol.md
docs/aegis/: INDEX.md
docs/aegis/adr/: ADR-0001-codex-owned-install-and-enhancement-boundaries.md  ADR-0002-safe-codex-configuration-restore.md
docs/aegis/baseline/: 2026-07-11-initial-baseline.md  2026-07-11-post-refactor-baseline.md  2026-07-12-safe-restore-baseline.md
docs/aegis/plans/: 2026-07-11-install-and-codex-enhancements-refactor.md  2026-07-12-codex-safe-configuration-restore.md
docs/aegis/specs/: 2026-07-11-install-and-codex-enhancements-design.md  2026-07-12-codex-safe-configuration-restore-design.md
docs/aegis/work/2026-07-11-install-and-codex-enhancements-refactor/: 10-intent.md  20-checkpoint.md  90-evidence.md  99-reflection.md  baseline-read-set-hint.json  baseline-usage-draft.json  drift-check-draft.json  evidence-bundle-draft-clean-flet-app-archive.json  evidence-bundle-draft-codex-bundled-model-catalog.json  evidence-bundle-draft-codexplusplus-marketplace-reference.json  evidence-bundle-draft-complexity-closure-after-npm-cmd-repair.json  evidence-bundle-draft-complexity-closure.json  evidence-bundle-draft-final-python-verification.json  evidence-bundle-draft-final-windows-installer.json  evidence-bundle-draft-retirement-and-package-guard.json  evidence-bundle-draft-strict-visibility-regression.json  evidence-bundle-draft-task1-model-unlocker-tests.json  evidence-bundle-draft-windows-npm-cmd-refreshed-artifacts.json  (+8 more)
scripts/: build_installer.ps1  build_windows.ps1  installer.iss  patch_serious_python_windows.py
src/llanfeng_code_assistant/: __init__.py  __main__.py  app.py  codex_config_restorer.py  codex_desktop_launcher.py  codex_model_catalog_editor.py  codex_plugin_marketplace.py  codex_statsig_unlocker.py  constants.py  deeplink.py  environment.py  file_ops.py  inject_launch.py  installer.py  model_fetcher.py  models.py  packaging.py  paths.py  protocol_document.py  secrets.py  single_instance.py  storage.py  update_banner.py  updater.py
src/llanfeng_code_assistant/config/: __init__.py  claude.py  codex.py  codex_models.py
tests/: test_codex_config_restorer.py  test_codex_desktop_launcher.py  test_codex_model_catalog_editor.py  test_codex_plugin_marketplace.py  test_codex_statsig_unlocker.py  test_config_writers.py  test_deeplink.py  test_entrypoint_and_ui.py  test_environment.py  test_installer.py  test_model_fetcher.py  test_models.py  test_packaging_config.py  test_packaging_runtime_patch.py  test_single_instance.py  test_storage_and_installer.py  test_updater.py
(+23 files in other folders)
