[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llanfeng-code-assistant"
version = "1.2.0"
description = "Windows desktop helper for Codex and Claude installation and Codex enhancements."
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.2.25",
    "flet==0.85.3",
    "httpx==0.28.1",
    "websockets==16.0",
    "chromium-reader==0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
]

[project.scripts]
llanfeng-code-assistant = "llanfeng_code_assistant.__main__:main"

[tool.flet.app]
module = "main.py"
# Explicitly list packages that serious_python might miss via static analysis.
# websockets uses lazy imports internally and must be named here so Flet's
# build tool bundles it even when the top-level import is deferred.
packages = ["websockets", "chromium_reader"]
exclude = [
    ".agents",
    ".claude",
    ".codex",
    ".git",
    ".github",
    ".gitignore",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "AGENTS.md",
    "CHANGELOG.md",
    "Codex.md",
    "LOGO.png",
    "PRODUCT.md",
    "README.md",
    "docs",
    "pyproject.toml",
    "scripts",
    "tests",
    "venv",
]

[tool.flet.cleanup]
app = true
app_files = ["**.egg-info", "**.pyc"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
